test/corpus/functions.txt
================================================================================
Function definition
================================================================================

fn pi() = 3.14

--------------------------------------------------------------------------------

(source_file
  (function_decl
    (identifier)
    (number)))

================================================================================
Function definition without body
================================================================================

fn pi()

--------------------------------------------------------------------------------

(source_file
  (function_decl
    (identifier)))

================================================================================
Function definition with parameters
================================================================================

fn pi(n) = n * 3.14
fn multipi(a, b, c) = a * 3.14 * b * c

--------------------------------------------------------------------------------

(source_file
  (function_decl
    (identifier)
    (identifier)
    (factor
      (identifier)
      (multiply)
      (number)))
  (function_decl
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (factor
      (factor
        (factor
          (identifier)
          (multiply)
          (number))
        (multiply)
        (identifier))
      (multiply)
      (identifier))))

================================================================================
Function definition with types
================================================================================

fn pi() -> Scalar = 3.14
fn pi2(n: Scalar) -> Scalar = n * 3.14

--------------------------------------------------------------------------------

(source_file
  (function_decl
    (identifier)
    (type_annotation
      (dimension_expr
        (identifier)))
    (number))
  (function_decl
    (identifier)
    (identifier)
    (dimension_expr
      (identifier))
    (type_annotation
      (dimension_expr
        (identifier)))
    (factor
      (identifier)
      (multiply)
      (number))))

================================================================================
Bug #2
================================================================================

fn from_fahrenheit(t_fahrenheit: Scalar) -> Temperature
fn to_fahrenheit(t_kelvin: Temperature) -> Scalar = (t_kelvin / kelvin) / scale_fahrenheit - offset_fahrenheit

--------------------------------------------------------------------------------

(source_file
  (function_decl
    (identifier)
    (identifier)
    (dimension_expr
      (identifier))
    (type_annotation
      (dimension_expr
        (identifier))))
  (function_decl
    (identifier)
    (identifier)
    (dimension_expr
      (identifier))
    (type_annotation
      (dimension_expr
        (identifier)))
    (factor
      (factor
        (identifier)
        (divide)
        (identifier))
      (divide)
      (term
        (identifier)
        (minus)
        (identifier)))))

================================================================================
Function definition with struct in body
================================================================================

fn foo(x) =
  Foo { y: y } 
  where y = x

--------------------------------------------------------------------------------

(source_file
 (function_decl
  (identifier)
  (identifier)
  (struct_expression
   (identifier)
   (identifier)
   (identifier))
  (identifier)
  (identifier)))
